# Prueba-AI

./: .gitignore  LICENSE  README.md  env.example  example_usage.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/database/: database.py  models.py
app/graph/: agent_graph.py  nodes.py
app/models/: api.py  database.py
app/services/: chat_service.py  document_processor.py  vector_store.py
scripts/: init_db.py
tests/: test_api.py
